--- a/settings.gradle
+++ b/settings.gradle
@@ -299,7 +299,7 @@ if (buildProperties.includeCidrPlugins) {
             ":kotlin-ultimate:ide:clion-native",
             ":kotlin-ultimate:ide:appcode-native",
             ":kotlin-ultimate:ide:mobile-native",
-            ":kotlin-ultimate:prepare:cidr-plugin",
+            ":kotlin-ultimate:prepare:common-cidr-plugin",
             ":kotlin-ultimate:prepare:clion-plugin",
             ":kotlin-ultimate:prepare:appcode-plugin",
             ":kotlin-ultimate:prepare:mobile-plugin",
